Finished swagger, implemented /sendFile
Files are saved with a combination of idUser + idChat + nanoseconds + random number 1-100
